{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 10,
  "lineage": "71c9a10a-689e-0f4a-af8c-46a01c563401",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/networkInterfaces/NextOpsVML01-nic",
            "internal_domain_name_suffix": "3kiesxrildwufe0gzhfx1hedpg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.50.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/publicIPAddresses/NextOpsVML01PIP01",
                "subnet_id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/virtualNetworks/NextOpsVNET20/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "NextOpsVML01-nic",
            "private_ip_address": "10.50.0.4",
            "private_ip_addresses": [
              "10.50.0.4"
            ],
            "resource_group_name": "NextOpsRG02"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "NextOpsVML01-nic",
            "resource_group_name": "NextOpsRG02",
            "subscription_id": "a355c32e-4a22-4b05-aab4-be236850fa6e"
          },
          "dependencies": [
            "azurerm_public_ip.myVMPIP01",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.myvnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/networkSecurityGroups/NextOpsNSGT02",
            "location": "eastus",
            "name": "NextOpsNSGT02",
            "resource_group_name": "NextOpsRG02",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "NextOpsNSGT02",
            "resource_group_name": "NextOpsRG02",
            "subscription_id": "a355c32e-4a22-4b05-aab4-be236850fa6e"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/networkSecurityGroups/NextOpsNSGT02/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "NextOpsNSGT02",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "NextOpsRG02",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "ssh",
            "network_security_group_name": "NextOpsNSGT02",
            "resource_group_name": "NextOpsRG02",
            "subscription_id": "a355c32e-4a22-4b05-aab4-be236850fa6e"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.myrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myVMPIP01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/publicIPAddresses/NextOpsVML01PIP01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.39.61.185",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "NextOpsVML01PIP01",
            "resource_group_name": "NextOpsRG02",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "NextOpsVML01PIP01",
            "resource_group_name": "NextOpsRG02",
            "subscription_id": "a355c32e-4a22-4b05-aab4-be236850fa6e"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/virtualNetworks/NextOpsVNET20/subnets/Subnet1",
            "name": "Subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "NextOpsRG02",
            "virtual_network_name": "NextOpsVNET20"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Subnet1",
            "resource_group_name": "NextOpsRG02",
            "subscription_id": "a355c32e-4a22-4b05-aab4-be236850fa6e",
            "virtual_network_name": "NextOpsVNET20"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1",
            "azurerm_virtual_network.myvnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/virtualNetworks/NextOpsVNET20/subnets/Subnet1",
            "network_security_group_id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/networkSecurityGroups/NextOpsNSGT02",
            "subnet_id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/virtualNetworks/NextOpsVNET20/subnets/Subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.myrg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.myvnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myvnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.50.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5e4990ea-5828-42ed-9346-c9cb7d9c837e",
            "id": "/subscriptions/a355c32e-4a22-4b05-aab4-be236850fa6e/resourceGroups/NextOpsRG02/providers/Microsoft.Network/virtualNetworks/NextOpsVNET20",
            "location": "eastus",
            "name": "NextOpsVNET20",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "NextOpsRG02"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "NextOpsVNET20",
            "resource_group_name": "NextOpsRG02",
            "subscription_id": "a355c32e-4a22-4b05-aab4-be236850fa6e"
          },
          "dependencies": [
            "azurerm_resource_group.myrg1"
          ]
        }
      ]
    }
  ]
}